nav bar aligning issues

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,3 +1,30 @@
-header {
-    color: black;
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
+
+body{
+    background-color: #f8f0e3;
+}
+
+
+header {
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #bea4938e;
+    color: whitesmoke;
+}
+
+nav a {
+    color: whitesmoke;
+    font-size: 20px;
+}
+
+nav {
+    float: right;
+    margin-top: -70px;
+}
+ 
+
